# OlympAlgorithms

./: .gitignore  Algorithms.h  CMakeLists.txt  Functions.h  README.md
data_structures/: DSU.h  DataStructures.h  FenwickTree.h  HashTable.h  HeapTree.h  MaxQueue.h  SegmentTree.h  SparseTable.h
geometry/: Circle.h  Complex.h  Cut.h  Geometry.h  Line.h  Matrix.h  PolyAngle.h  Ray.h  Vec.h
graphs/: DefaultGraphs.h  EdgeTypes.h  Graphs.h  Trees.h  WeightedGraphs.h
libs/: system_includes.inc
libs/graphs/: graphs.h
libs/utils/: defs.h
math/: FastFourierTrick.h  Functions.h  Math.h
optimize/: AnnealingMethod.h  Optimize.h
scripts/: expand_includes.sh  setup_template.sh
strings/: Functions.h  HashString.h  Strings.h  SuffixAutomat.h  Trie.h
temp/: FenwickTree.txt  Grafs.txt  SparseTable.txt
temp/Геометрия/: main.cpp  Геометрия.sln  Геометрия.vcxproj
temp/ДО/: CutTree.h  LiChao.txt  Индекс максимума на отрезке.txt  Максимальная последовательность нулей на отрезке, изменение элемента.txt  Увеличение всех чисел на интервале на одно число, максимум на интервале.txt  Установление минимума на отрезке, разность максимального и минимального элемента на отрезке.txt
temp/ДП/: Двумерная динамика (расстояние по ливенштейну для двух строк).txt  Динамика с использованием ДО (максимальная невозрастающая подпоследовательность).txt
temp/Декартово дерево/: Дерево по неявному ключу.txt  Дерево по явному ключу.txt
temp/Деревья/: Диаметр дерева.txt
temp/Кратчайшие пути/: Дийкстра O(m log n).txt  Дийкстра O(n ^ 2).txt
templates/: stress_tests.h  template.h
(+257 files in other folders)
